force-app/main/default/objects/Ordine__c/Ordine__c.object-meta.xml
<CustomObject>
    <label>Ordine</label>
    <nameField>
        <displayFormat>O-{000}</displayFormat>
        <label>Numero ordine</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordini</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>