force-app/main/default/objects/Ordine__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Cliente__c</referenceTo>
    <relationshipLabel>Ordini</relationshipLabel>
    <relationshipName>Ordini</relationshipName>
    <type>Lookup</type>
</CustomField>