force-app/main/default/objects/Ordine__c/fields/DataOrdine__c.field-meta.xml
<CustomField>
    <fullName>DataOrdine__c</fullName>
    <label>DataOrdine</label>
    <required>true</required>
    <type>Date</type>
</CustomField>