force-app/main/default/objects/Ordine__c/fields/TotaleOrdine__c.field-meta.xml
<CustomField>
    <fullName>TotaleOrdine__c</fullName>
    <label>TotaleOrdine</label>
    <summarizedField>RigaOrdine__c.Subtotale__c</summarizedField>
    <summaryForeignKey>RigaOrdine__c.Ordine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>